2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Implemented drawing highlight indicators on a vertical scroller of log views.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Now we can rearrange servers and channels on the server tree.

2008-02-29  Satoshi Nakagawa <artension@gmail.com>

	Changed to retain input text when changed the current channel, and restore it when come back to the channel.

2008-02-28  Satoshi Nakagawa <artension@gmail.com>

	Changed to print 401 errors in a server log when a channel or a talk is inactive.

2008-02-28  Satoshi Nakagawa <artension@gmail.com>

	Now 401 error is printed in a talk log when there is a talk item for the target.

2008-02-28  Satoshi Nakagawa <artension@gmail.com>

	Now a scroll position is kept when received a new line and removed the first line.
	Added [] and []= method for DOM classes.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added "colornumber" attribute to span.sender for coloring each nick with different colors.
	Added "highlight" attribute to set style for highlighted lines.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added "identified" attribute in log view's html for CAPAB IDENTIFY-MSG support.

2008-02-27  Satoshi Nakagawa <artension@gmail.com>

	Added support for CAPAB IDENTIFY-MSG and CAPAB IDENTIFY-CTCP.

==== LimeChat 0.16.4 ====

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the preferences dialog and the server properties dialog.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed the directory name, from "Theme" to "Themes".
	Added migration code in prelude.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added a menu item, "Mark All as Read".

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	New style action messages.
	Fixed wrong css selectors in all themes.
	Changed the default nick format to '%n: '.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed to remember the current text if modified when pushed up key.
