@@ -10,7 +10,9 @@
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>24</integer>
+		<integer>387</integer>
+		<integer>696</integer>
+		<integer>781</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9C31</string>
